--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Deen Challenge</title>
-<link rel="icon" type="image/png" href="assets/images/image/favicon-32x32.png">
-
-
+  <title>Kiprotich Did</title>
+  <link rel="icon" type="image/png" href="assets/images/image/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css" />
 </head>
 
